fix: layout bug

--- a/src/styles/eliestetica/composition.scss
+++ b/src/styles/eliestetica/composition.scss
@@ -126,6 +126,7 @@
 }
 
 .entrega {
+  isolation: isolate;
   .flex {
     flex-wrap: wrap;
     margin-bottom: tokens.$space-10;
@@ -204,9 +205,9 @@
 
 .bubbles {
   position: relative;
-  isolation: isolate;
   &::before {
     content: "";
+    pointer-events: none;
     position: absolute;
     inset: -10rem;
     transform: translateY(40%);
